src/tests/integration/snapshots/mosaic__tests__integration__basic__cannot_split_terminals_vertically_when_active_terminal_is_too_small-3.snap
---
source: src/tests/integration/basic.rs
expression: snapshot
---
line4-bb
line5-bb
line6-bb
line7-bb
line8-bb
line9-bb
line10-b
line11-b
line12-b
line13-b
line14-b
line15-b
line16-b
line17-b
line18-b
line19-b
prompt $
        
Bye from
 Mosaic!
