src/tests/integration/snapshots/mosaic__tests__integration__basic__cannot_split_terminals_vertically_when_active_terminal_is_too_small.snap
---
source: src/tests/integration/basic.rs
expression: snapshot
---
█       
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        
